--- a/src/css/register.css
+++ b/src/css/register.css
@@ -17,20 +17,25 @@
 
 .register{
     width: 100%;
-    height: 1000px;
-    background: url(https://www.tp-linkshop.com.cn/Content/themes/base/images/Account/loginBg.png);
+    height: 588px;
+    background: url(https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/aece569d6689b4c461bb53efd9eea9c7.jpg);
+    position: absolute;
+    left: 0;
+    top: 98px;
+    background-repeat: no-repeat;
+    background-position: top center;
 }
 .register-container{
-    width:600px;
+    width:500px;
     background-color:#fff;
-    margin-left:360px;
-    float:left;
-    margin-top:80px;
+    margin-right:-60px;
+    float:right;
+    
 }
 .register-container-titile{
     padding:40px 0 0;
     font-size:24px;
-    color:#0096FF;
+    color:#ff6700;
     line-height:40px;
     text-align:center;
     font-weight:700;
@@ -55,8 +60,8 @@
 }
 
 .account-tab-item.active{
-    color:#0096FF;
-    border-bottom:1px solid #0096FF
+    color:#ff6700;
+    border-bottom:1px solid #ff6700
 }
 
 .account-phone{
@@ -100,8 +105,9 @@
 
 .account-register-phone-code-img{position:absolute;top:-5px;right:0;width:100px;height:30px;display:block;cursor:pointer;font-family:Arial,宋体; 
     font-style:italic;border:none;letter-spacing:3px;outline: none;}
+.account-register-phone-code-img:focus{border-bottom: none;}
 
-.account-register-phone-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#0096FF;border-radius:2px;cursor:pointer}
+.account-register-phone-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#ff6700;border-radius:2px;cursor:pointer}
 
 .account-register-submit-word{font-size:16px;color:#FFF;text-align:center;line-height:48px;font-weight:700}
 
@@ -126,9 +132,12 @@
 .account-mail-code{width:400px;height:48px;margin:24px auto 0;position:relative}
 
 .account-mail-code-input{font-size:14px;color:#333;line-height:20px;border:none;padding-bottom:9px;width:100%;border-bottom:1px solid #ccc}
+.account-mail-code-img:focus{border-bottom: none;}
 .account-mail-code-img{position:absolute;top:-5px;right:0;width:100px;height:30px;display:block;cursor:pointer;font-family:Arial,宋体; 
     font-style:italic;border:none;letter-spacing:3px;outline: none;}
 
-.account-mail-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#0096FF;border-radius:2px;cursor:pointer}
-.account-register-main-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#0096FF;border-radius:2px;cursor:pointer}
+.account-mail-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#ff6700;border-radius:2px;cursor:pointer}
+.account-register-main-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#ff6700;border-radius:2px;cursor:pointer}
 .account-register-main-submit-word{font-size:16px;color:#FFF;text-align:center;line-height:48px;font-weight:700}
+
+button:focus{outline:none}
