--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,26 +11,30 @@
 .layout-header-nav{width:100%;min-width:1200px;height:40px;background-color:#333}
 .layout-header-nav .header-benefit{font-size:12px;line-height:40px;color:#FFF;float:left}
 .layout-header-nav .header-nav{float:right}
-.layout-header-nav .header-nav-item{font-size:12px;line-height:40px;color:rgba(255,255,255,.7);padding:0 8px}
+.layout-header-nav .header-nav-item{font-size:12px;line-height:40px;color:#b0b0b0;padding:0 2px}
 a.header-nav-item{font-size:12px;line-height:40px;color:#ccc;padding:0 8px}
-a.header-nav-item:hover{color:#fff}
+a.header-nav-item:hover{color:#fff;text-decoration:none}
+.layout-header-nav .header-nav-left{float: left;}
+.layout-header-nav .header-nav-left-item{font-size:12px;line-height:40px;color:#b0b0b0;padding:0 2px}
+a.header-nav-left-item:hover{color:#fff;text-decoration:none}
 
 .header-cart{background-color:#4d4d4d;float:right;margin-left:8px;position:relative}
 .header-cart-button{width:100%;height:100%}
 .header-cart-button-img{background:url(http://www.tp-linkshop.com.cn/Content/themes/base/images/Shared/shopping_cart.png) center center no-repeat;background-size:100%;margin:12px 4px 12px 12px;float:left;width:16px;height:16px}
 .header-cart-below,.header-cart-nothing{position:absolute;top:40px;right:0;z-index:99;width:276px}
 .header-cart-button-word{font-size:12px;line-height:40px;color:#ccc;float:left}
-.header-cart.active{background-color:#0096ff}
+/* .header-cart.active{background-color:#0096ff} */
+.header-cart.active{background-color:#ff6700;}
 
 .header-cart.active .header-cart-button-img{background:url(http://www.tp-linkshop.com.cn/Content/themes/base/images/Shared/shopping_cart_hover.png) center center no-repeat;background-size:100%}
 .header-cart.active .header-cart-button-word{color:#fff}
 
 
-.layout-header-search{width:100%;min-width:1200px;height:80px;background-color:#FFF;border-bottom:1px solid #E6E6E6;box-shadow:0 0 10px 0 rgba(0,0,0,.04);box-sizing:border-box}
-.layout-header-search .header-logo{width:237px;height:20px;margin:30px 0 0;float:left;background-image:url(http://www.tp-linkshop.com.cn/Content/themes/base/images/Shared/logo.png);background-size:100%}
-.layout-header-search .header-search{position:relative;width:320px;height:40px;margin:20px 0 0;background-color:#FFF;float:right}
-.layout-header-search .header-search-input{padding:10px 32px 10px 12px;width:276px;height:40px;border:1px solid #E6E6E6;font-size:14px;color:#333;line-height:20px}
-.layout-header-search .header-search-input:focus{outline:0;caret-color:#0096FF;border:1px solid #0096FF}
+.layout-header-search{width:100%;min-width:1200px;height:100px;background-color:#FFF;box-shadow:0 0 10px 0 rgba(0,0,0,.04);box-sizing:border-box}
+.layout-header-search .header-logo{width:55px;height:55px;margin:22.5px 0 0;float:left;background-image:url(../images/MiLogo.png);background-size:100%}
+.layout-header-search .header-search{position:relative;width:300px;height:40px;margin:30px 0 0 0;background-color:#FFF;float:right}
+.layout-header-search .header-search-input{padding:10px 32px 10px 12px;width:250px;height:40px;border:1px solid #E6E6E6;font-size:14px;color:#333;line-height:20px}
+.layout-header-search .header-search-input:focus{outline:0;caret-color:#ff6700;border:1px solid #ff6700}
 .layout-header-search .header-search-submit{width:24px;height:24px;background-image:url(../images/search2.png);background-size:100% 100%;background-color:#FFF;border:none;cursor:pointer;position:absolute;top:10px;right:12px}
 .layout-header-search .header-search-submit:hover{background-image:url(../images/search.png)}
 .layout-header-search .header-search-keywords{position:absolute;top:0;left:0;padding:9px 12px}
@@ -38,52 +42,67 @@ a.header-nav-item:hover{color:#fff}
 .layout-header-search .header-search-keywords-item:hover{color:#0096FF}
 
 
-.layout-banner-nav{width:600px;min-width:500px;background:#FFF;box-shadow:0 0 10px 0 rgba(0,0,0,.04);position: relative;}
-.layout-banner-nav .banner-nav-list-item{font-size:14px;line-height:80px;color:#333;margin:0 24px 0 0;display:block;float:left}
-.layout-banner-nav .banner-nav-list-item:first-of-type{margin-left:44px}
-.layout-banner-nav .banner-nav-list-item:hover{color:#0096FF}
-.container2{width:900px;background-color: salmon;}
+.layout-banner-nav{background:#FFF;box-shadow:0 0 10px 0 rgba(0,0,0,.04);position: relative;margin-left: 200px;}
+.layout-banner-nav .banner-nav-list-item{font-size:16px;line-height:100px;color:#333;margin:0 20px 0 0;display:block;float:left}
+/* .layout-banner-nav .banner-nav-list-item:first-of-type{margin-left:150px} */
+.layout-banner-nav .banner-nav-list-item:hover{color:#ff6700;}
+.layout-banner-nav .banner-nav-list .container2{display: left;}
 
+.layout-banner-nav .banner-nav-list-last{display:inline;position: relative;}
+.layout-banner-nav .banner-nav-list-item-last{font-size:16px;line-height:100px;color:#333;margin:0 20px 0 0;display:block;float:left}
+.layout-banner-nav .banner-nav-list-item-last:hover{color:#ff6700;}
 .nav_box{
     width: 100%;
     background-color: white;
-    border-top: 1px solid #333;
-    border-bottom: 1px solid #333;
-    display: none;
+    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+    box-shadow: 0px 2px 5px  #e0e0e0;
+    display: block;
     position: absolute;
     z-index: 9999;
 }
 .nav_box >ul{display: flex;}
 .nav_box >ul >li{ 
     flex: 1;
-    padding: 20px;
+    padding: 8px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 .nav_box >ul >li >div{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-right: 1px solid #333;
+    border-right: 1px solid #e0e0e0;
     margin-bottom: 15px;
-    padding-right: 40px;
+    padding-right: 20px;
 }
+.nav_box >ul >li:last-child >div{
+    
+    border-right: none;
+    
+}
+
 .nav_box >ul >li >div img{
-    width: 150px;
-    height: 150px;
+    width: 160px;
+    height: 110px;
     display: block;
     
 }
 .nav_box >ul >li  >p{
-    margin-bottom: 5px;
+    margin-bottom: 3px;
+    margin-left: -20px;
+    font-size: 12px;
 }
 .model{
     font-size: 10px;
 }
 .price{
     color: coral;
+    margin-left: -20px;
 }
 
 .banner{
@@ -96,7 +115,7 @@ a.header-nav-item:hover{color:#fff}
     width: 200px;
     height: 100%;
     position: absolute;
-    left: 15px;
+    left: 0px;
     top: 0;
     background-color: rgba(0, 0, 0, .4);
     z-index: 999;
@@ -113,7 +132,7 @@ a.header-nav-item:hover{color:#fff}
     text-indent: 20px;
 }
 .banner > .nav_list >ul >li:hover{
-   background-color: #0096FF;
+   background-color: #ff6700;
 }
 
 .banner >.nav_list >ul >li >p{
@@ -121,21 +140,85 @@ a.header-nav-item:hover{color:#fff}
     margin-right: 15px;
 }
 
+/* 热卖 */
+.hot-products{
+    padding-top: 20px;
+    padding-bottom: 10px;
+
+}
 .hot-products-list-item-inner{
-    width: 280px;
-    height: 260px;
+  
 }
 .hot-products-list {
-    margin-top: 30px;
-    margin-bottom: 60px;
+    
+    margin-bottom: 25px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     /* align-items: center; */
 }
+.hot-products-list .hot-products-list-left{
+    width: 200px;
+    height: 170px;
+    
+}
 
+.hot-products-list-item-inner >img{
+    width: 310px;
+    /* height: 170px; */
+}
+
+/*  热卖左侧菜单 */
+.hot-products-list-left >ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #5f5750;
+}
+
+.hot-products-list-left >ul>li{
+    width: 66px;
+    height: 84px;
+}
+.hot-products-list-left >ul>li>a{
+   color: #FFF;
+   opacity: 60%;
+   padding-top:18px ;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   align-content: space-between;
+}
+
+.hot-products-list-left >ul>li>a>img{
+    width: 24px;
+    height: 24px;
+}
+
+.hot-products-list-left >ul>li>a:hover{
+    opacity: 100%;
+}
 /* .banner >.list-show{
     width: 600px;
     height: 500px;
 } */
 
+.banner .swiper-slide img{
+    width: 1200px;
+    height: 500px;
+}
+
+.banner-outer{
+    width: 100%;
+    background-color: #FFF;
+}
+.outer{
+    width: 100%;
+    background-color: #FFF;
+}
+
+
+.footer-promise >img{
+    width: 1200px;
+    height: 120px;
+}
