--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,6 +1,6 @@
 .header{
     width:100%;
-    height:80px;
+    
 }
 
 .header .container{
@@ -8,30 +8,37 @@
     margin:0 auto;
 }
 
-.header .container img{
+/* .header .container img{
     width:237px;
     height:20px;
     margin:30px 123px 0 0;
     display:inline-block;
-}
+} */
+
+
 
 .login{
     width: 100%;
-    height: 1000px;
-    background: url(https://www.tp-linkshop.com.cn/Content/themes/base/images/Account/loginBg.png);
+    height: 588px;
+    background: url(https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/aece569d6689b4c461bb53efd9eea9c7.jpg);
+    position: absolute;
+    left: 0;
+    top: 98px;
+    background-repeat: no-repeat;
+    background-position: top center;
 }
 
 .login-container{
-    width:600px;
+    width:445px;
     background-color:#fff;
-    margin-left:360px;
-    float:left;
-    margin-top:80px;
+    margin-left:355px;
+    float:right;
+    margin-top:60px;
 }
 .login-container-titile{
     padding:40px 0 0;
     font-size:24px;
-    color:#0096FF;
+    color:#ff6700;
     line-height:40px;
     text-align:center;
     font-weight:700;
@@ -90,7 +97,7 @@
 
 .account-code-info{font-size:12px;color:#FF2119;margin:8px 0 0 100px}
 
-.account-login-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#0096FF;border-radius:2px;cursor:pointer}
+.account-login-submit{width:400px;height:48px;margin:48px auto 24px;background-color:#ff6700;border-radius:2px;cursor:pointer}
 
 .account-login-submit-word{font-size:16px;color:#FFF;text-align:center;line-height:48px;font-weight:700}
 .account-bottom{width:400px;height:20px;margin:0 auto 80px}
@@ -99,7 +106,8 @@
 .account-login-main-bottom-remember-check.active{width:16px;height:16px;background-image:url(/Content/themes/base/images/Account/Choose.png)}
 .account-login-main-bottom-remember-word{float:left;font-size:14px;color:#333}
 .account-login-main-bottom-forget,.account-login-main-bottom-other,.account-login-main-bottom-register{font-size:14px;float:right;height:20px;line-height:20px}
-.account-bottom-register{color:#0096FF}
+.account-bottom-register:hover{color:#ff6700}
 .account-login-main-bottom-other{color:#CCC;padding:0 12px}
 .account-login-main-bottom-forget{color:#0096FF}
-input:focus{border-bottom:1px solid #0096FF;caret-color:#0096FF}
+input:focus{border-bottom:1px solid #ff6700;caret-color:#ff6700}
+button:focus{outline:none}
