--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -6,6 +6,7 @@ h1,h2,h3,h4,h5,h6,strong,b{font-weight: normal;}
 ul,li{list-style: none;}
 em,i{font-style: normal;}
 a,u{text-decoration: none;}
+a:hover{text-decoration: none;}
 img{display: block;}
 
 input:focus{ outline:none; }
